[workspace]
# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"
members = [
    "nexus-webapi",
    "nexus-common",
    "nexus-watcher",
    "pubky-watcher",
    "nexusd",
    "examples",
]

[workspace.dependencies]
anyhow = "1.0.103"
blake3 = "1"
hex = "0.4"
async-trait = "0.1.89"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = "4.6.1"
deadpool-redis = "0.23"
dirs = "6.0.0"
neo4rs = "0.8.0"
redis = "1.0.4"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
pubky = "0.9.3"
pubky-app-specs = { version = "0.6.1", features = ["openapi"] }
pubky-testnet = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["full"] }
tokio-shared-rt = "0.1"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-test = "0.2"
url = "2"
utoipa = "5.5.0"
futures = "0.3"
