[package]
name = "nexus-webapi"
version = "0.4.1"
edition = "2021"
description = "Nexus API exposes a social-media-like API capable of powerful Web-of-Trust inference"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"
build = "build.rs"

[dependencies]
async-trait = { workspace = true }
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const_format = "0.2.36"
futures-util = "0.3.32"

opentelemetry = { workspace = true }
pubky-app-specs = { workspace = true }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
pubky-watcher = { path = "../pubky-watcher" }
deadpool-redis = { workspace = true }
pubky = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.7.0", features = [
    "compression-full",
    "cors",
    "fs",
    "limit",
    "timeout",
] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { version = "0.8", features = ["async_tokio"] }
http-body-util = "0.1.3"
httpc-test = "0.1.10"
pubky-testnet = { workspace = true }
serde_urlencoded = "0.7"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-shared-rt = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
url = "2.5.8"

[[bench]]
name = "bootstrap"
harness = false

[[bench]]
name = "user"
harness = false

[[bench]]
name = "tag"
harness = false

[[bench]]
name = "post"
harness = false

[[bench]]
name = "reindex"
harness = false

[[bench]]
name = "follows"
harness = false

[[bench]]
name = "streams"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "avatar"
harness = false

[[bench]]
name = "events"
harness = false
