[package]
name = "pubky-watcher"
version = "0.1.0"
edition = "2021"
description = "Poll events from pubky homeservers"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
pubky = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
